fix(ui): correct alignment issues in navigation bar

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+body {
+  background-color: #fafafa;
+}
+
+/* Navigation */
 .navigation-button {
   font-size: 1rem;
   font-weight: 500;
@@ -12,4 +17,9 @@
   background: none;
   border: none;
   color: #007aff;
+}
+
+/* Breadcumb Navigation */
+.hierarchy-small-nav {
+  color: #bdbdbd;
 }
